--- a/public/problems/terr1/absolute value.html
+++ b/public/problems/terr1/absolute value.html
@@ -20,7 +20,9 @@
 1.001<br>
 -123456.789</p>
 <h3 id="expected-algorithms">Expected Algorithms</h3>
-<p>— Conditionals</p>
+<ul>
+<li>Conditionals</li>
+</ul>
 <h3 id="expected-time-complexity--space-complexity">Expected Time Complexity &amp; Space Complexity</h3>
 <p><strong>Time Complexity:</strong> O(1)<br>
 <strong>Space Complexity:</strong> O(1)</p>
