--- a/public/problems/terr1/fruits decomposition.html
+++ b/public/problems/terr1/fruits decomposition.html
@@ -2,7 +2,7 @@
 <h3 id="problem-description">Problem Description</h3>
 <p>A rotten fruit will decompose in the soil, and provides the soil nutritions. Therefore other plants will have better growth. Every fruit has a nutrition value of <em>n</em>, where <em>n</em> is a positive integer. The process of decomposition yields to the following:</p>
 <p>1- A fruit piece has nutrition value of <em>n</em> will decompose into two smaller fruit pieces having nutrition values of <em>m</em> and <em>n/m</em>, where <em>m</em> is <em>n</em>’s smallest prime factor with <em>m</em> is strictly less than <em>n</em>. So now there’re 2 fruit pieces after decomposition.</p>
-<p>2- Keep decomposing the fruit pieces as much as possible, until no more fruit piece can be decomposed into smaller pieces.</p>
+<p>2- Keep decomposing the fruit pieces as many as possible, until no more fruit piece can be decomposed into smaller pieces.</p>
 <p>Return the sum of nutrition value of all final fruit pieces that cannot be further decomposed.</p>
 <p>(*Note: You can always re-decompose a decomposed fruit piece, as long as it meets the decomposition requirements)</p>
 <h3 id="example">Example</h3>
@@ -15,7 +15,7 @@
 <p><strong>Number of Testcases:</strong> 15<br>
 <strong>Specification:</strong> Every testcase consists one line, each line has a single number <em>n</em>, output the sum of nutrition value of all final fruit pieces that cannot be further decomposed<br>
 <strong>Input:</strong><br>
-1<br>
+6<br>
 100<br>
 396<br>
 899<br>
